examples/errors/18_cant_extend_group/custom_widgets.tmd
#use <definitions.tmd>

element List -> definitions::Widget;